extended example calls
