# src/main/kotlin/com/openresearch/springapi/api/ExampleApiDelegateImpl.kt
@@ -3,8 +3,8 @@ package com.openresearch.springapi.api
 import com.openresearch.springapi.api.mapper.dozer.ExampleDozerMapper
 import com.openresearch.springapi.api.mapper.mapstruct.ExampleMapStructMapper
 import com.openresearch.springapi.logging.LoggedMethod
-import com.openresearch.springapi.model.Example
 import com.openresearch.springapi.model.ExampleDto
+import com.openresearch.springapi.model.ExampleListDto
 import com.openresearch.springapi.model.ExampleNewDto
 import com.openresearch.springapi.service.ExampleService
 import org.springframework.beans.factory.annotation.Autowired
@@ -14,6 +14,9 @@ import org.springframework.stereotype.Component
 import java.util.UUID
 import javax.transaction.Transactional
 
+/**
+ * This class is using MapStruct and Dozer for demo purpose.
+ */
 @Component
 class ExampleApiDelegateImpl @Autowired constructor(
     private val exampleService: ExampleService,
@@ -27,18 +30,16 @@ class ExampleApiDelegateImpl @Autowired constructor(
         xApiKey: UUID,
         requestBody: ExampleNewDto
     ): ResponseEntity<ExampleDto> {
-        val dto = withMapStruct(requestBody)
+        val created = exampleService.createExample(exampleMapStructMapper.mapNewDtoToEntity(requestBody))
+        val dto = exampleMapStructMapper.mapEntityToNewDto(created)
         return ResponseEntity.status(HttpStatus.CREATED).body(dto)
     }
 
-    private fun withDozer(requestBody: ExampleNewDto): ExampleDto {
-        val created = exampleService.createExample(exampleDozerMapper.mapTo(requestBody, Example::class.java))
-        return exampleDozerMapper.mapTo(created, ExampleDto::class.java)
-    }
-
-    private fun withMapStruct(requestBody: ExampleNewDto): ExampleDto {
-        val created = exampleService.createExample(exampleMapStructMapper.mapNewDtoToEntity(requestBody))
-        return exampleMapStructMapper.mapEntityToNewDto(created)
+    @LoggedMethod
+    override fun readExamples(xAPIKey: UUID?): ResponseEntity<ExampleListDto> {
+        val examples = exampleService.readAllExamples()
+        val dtos = exampleDozerMapper.mapToList(examples, ExampleDto::class.java)
+        return ResponseEntity.ok(ExampleListDto().content(dtos))
     }
 
 }
